--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,1 +1,12 @@
-
+.circleimg{
+  //  width:50px;
+  //  height:50px;
+  padding: 1px;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    border-width: 5px;
+    border-color: var(--ion-color-secondary);
+    border-style: solid;
+    margin: 15px;
+    
+}
