--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,9 +1,82 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Tab Three
+      Configuración
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content style="background-color: blueviolet">
+  <ion-card>
+    <ion-item lines="none" color="secondary">
+      <ion-label style="font-weight:0.1rem" text-center><b>Datos Para Acceder</b></ion-label>
+      <ion-icon slot="end" name="logo-instagram"></ion-icon>
+    </ion-item>
+
+    <ion-card-content>
+      <form [formGroup]="myForm">
+        <ion-item lines="none">
+          <ion-label>
+            <ion-icon slot="start" name="person"></ion-icon>
+          </ion-label>
+          <ion-input required formControlName="user" type="text" placeholder="Usuario" (ionChange)="mensaje=''"></ion-input>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-label>
+            <ion-icon slot="start" name="lock"></ion-icon>
+          </ion-label>
+          <ion-input required formControlName="password" type="password" (ionChange)="mensaje=''"></ion-input>
+        </ion-item>
+      </form>
+
+
+
+      <!-- Bubbles -->
+      <div text-center *ngIf="busy">
+        <ion-spinner name="bubbles"></ion-spinner>
+      </div>
+      <div text-center *ngIf="mensaje.length>0">
+        <ion-chip>
+          <ion-label>{{mensaje}}</ion-label>
+        </ion-chip>
+      </div>
+
+
+
+      <ion-button (click)="LoginInstagram()" expand="block" color="primary">
+        Verificar
+      </ion-button>
+
+    </ion-card-content>
+
+  </ion-card>
+  <ion-card>
+    <ion-item lines="none" color="primary">
+      <ion-label style="font-weight:0.1rem" text-center><b>Cuenta Skymax</b></ion-label>
+      <ion-icon slot="end" name="logo-instagram"></ion-icon>
+    </ion-item>
+
+    <ion-card-content>
+      <form [formGroup]="myFormSkyMax">
+        <ion-item lines="none">
+          <ion-label>
+            <ion-icon slot="start" name="person"></ion-icon>
+          </ion-label>
+          <ion-input required formControlName="user" type="text" placeholder="Usuario"></ion-input>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-label>
+            <ion-icon slot="start" name="lock"></ion-icon>
+          </ion-label>
+          <ion-input required formControlName="password" type="password"></ion-input>
+        </ion-item>
+      </form>
+
+      <ion-button expand="block" color="primary">
+        Verificar
+      </ion-button>
+
+    </ion-card-content>
+
+  </ion-card>
+</ion-content>
