--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,26 @@
-<ion-tabs>
+<ion-tabs >
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" color="primary">
     <ion-tab-button tab="tab1">
       <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-label>Noticias</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-icon name="logo-instagram"></ion-icon>
+      <ion-label>Instagram</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="estadistica">
+        <ion-icon name="stats"></ion-icon>
+        <ion-label>Estadistica</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="tab3">
+      <ion-icon name="settings"></ion-icon>
+      <ion-label>Configuración</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
-    </ion-tab-button>
+
+
   </ion-tab-bar>
 
 </ion-tabs>
